feat: Add complete tournament system with 5 categories, authentication flow, and game improvements
- Add tournament system with General Knowledge, Kenyan History, Pop Culture, Geography, and Science categories
- Implement tournament gameplay with segments, timers, and scoring
- Improve authentication flow and UI components
- Add quick play functionality
- Update leaderboard and room features
- Enhance overall user experience

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		]
 	},
 	"dependencies": {
-		"@supabase/supabase-js": "^2.74.0"
+		"@supabase/supabase-js": "^2.74.0",
+		"@vercel/speed-insights": "^1.2.0"
 	}
 }
