--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^2.74.0",
-		"@vercel/speed-insights": "^1.2.0"
+		"@vercel/speed-insights": "^1.2.0",
+		"socket.io": "^4.8.1",
+		"uuid": "^13.0.0",
+		"ws": "^8.18.3"
 	}
 }
