chore: approve build scripts for Vercel

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"esbuild"
+		],
+		"ignoredBuiltDependencies": [
+			"@vercel/speed-insights"
 		]
 	},
 	"dependencies": {
